--- a/policies/scale-down-inference/2-cleanup-inference-pod.yaml
+++ b/policies/scale-down-inference/2-cleanup-inference-pod.yaml
@@ -14,10 +14,10 @@ spec:
             component: "predictor"
   conditions:
     all:
-    - key: "{{ time_since('', '{{ request.object.metadata.creationTimestamp || '{{ time_now() }}' }}', '') }}"
-      operator: GreaterThan
+    - key: "{{ time_since('', '{{ target.metadata.creationTimestamp || '{{ time_now() }}' }}', '') }}"
+      operator: GreaterThanOrEquals
       value: 3h
-    - key: "{{ request.object.metadata.namespace }}"
+    - key: "{{ target.metadata.namespace }}"
       operator: AnyNotIn
       value:
         - "openshift-*" # add more namespace if needed
